--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 	<artifactId>httpclient</artifactId>
 	<version>4.5.2</version>
 	</dependency>
+   <dependency>
+	<groupId>org.apache.hadoop</groupId>
+	<artifactId>hadoop-mapreduce-client-core</artifactId>
+	<version>2.7.2</version>
+</dependency>
    
     <dependency>
       <groupId>junit</groupId>
@@ -72,6 +77,29 @@
       <version>2.7.2</version>
       <scope>compile</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <version>2.7.2</version>
+      <scope>compile</scope>
+    </dependency>
+        <dependency>
+	<groupId>org.apache.hbase</groupId>
+	<artifactId>hbase-client</artifactId>
+	<version>1.2.0</version>
+</dependency>
+    <dependency>
+	<groupId>org.apache.hbase</groupId>
+	<artifactId>hbase-common</artifactId>
+	<version>1.2.0</version>
+</dependency>
+<dependency>
+	<groupId>org.apache.hbase</groupId>
+	<artifactId>hbase-server</artifactId>
+	<version>1.2.0</version>
+</dependency>
+
     <dependency>  
             <groupId>org.apache.hadoop</groupId>  
             <artifactId>hadoop-hdfs</artifactId>  
@@ -84,6 +112,13 @@
       <version>0.5.2</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+	<groupId>org.apache.hbase</groupId>
+	<artifactId>hbase</artifactId>
+	<version>1.2.0</version>
+	 <type>pom</type>
+</dependency>
+    
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
